workspace(
    name = "bazel-cdk-repro"
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name="rules_py",
    commit="846674298d84663dcc109b6b20f5f8fc39aacfd4",
    remote="https://github.com/aspect-build/rules_py",
    shallow_since="1668608162 -0500",
)

load("@rules_py//py:repositories.bzl", "rules_py_dependencies")

rules_py_dependencies()

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python",
    python_version = "3.9",
)

load("@python//:defs.bzl", py_interpreter = "interpreter")
load("@rules_python//python:pip.bzl", "pip_parse")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")

pip_parse(
    name = "pip",
    requirements_lock = "//py:requirements.txt.lock",
    python_interpreter_target = py_interpreter,
)

load("@pip//:requirements.bzl", lazy_pip_install = "install_deps")

lazy_pip_install()
