workspace(
    name = "bazel-cdk-repro"
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    urls = [
       "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.2.1/bazel-skylib-1.2.1.tar.gz",
       "https://github.com/bazelbuild/bazel-skylib/releases/download/1.2.1/bazel-skylib-1.2.1.tar.gz",
    ],
    sha256 = "f7be3474d42aae265405a592bb7da8e171919d74c16f082a5457840f06054728",
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()
    
load("@bazel_skylib//lib:versions.bzl", "versions")
        
versions.check(minimum_bazel_version = "4.0.0")

http_archive(
    name = "rules_python",
    sha256 = "bc4e59e17c7809a5b373ba359e2c974ed2386c58634819ac5a89c0813c15705c",
    strip_prefix = "rules_python-0.15.1",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.15.1.tar.gz"
)

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python",
    python_version = "3.9",
)

load("@python//:defs.bzl", py_interpreter = "interpreter")
load("@rules_python//python:pip.bzl", "pip_parse")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")

pip_parse(
    name = "pip",
    requirements_lock = "//py:requirements.txt.lock",
    python_interpreter_target = py_interpreter,
    enable_implicit_namespace_pkgs = True,
)

load("@pip//:requirements.bzl", lazy_pip_install = "install_deps")

lazy_pip_install()
